[project]
name = "wwdtm"
dynamic = ["version"]
authors = [
    {name = "Linh Pham", email = "dev@wwdt.me"}
]
description = "Library used to query data from copy of Wait Wait Stats Database."
readme = {file = "README.rst", content-type = "text/x-rst"}
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mysql-connector-python==8.2.0",
    "numpy==1.26.0",
    "python-slugify==8.0.1",
    "pytz==2023.3.post1",
]

[project.urls]
documentation = "https://docs.wwdt.me"
homepage = "https://github.com/questionlp/wwdtm"
repository = "https://github.com/questionlp/wwdtm"
Mastodon = "https://linh.social/@qlp"

[tool.setuptools.dynamic]
version = {attr = "wwdtm.VERSION"}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
required-version = "23.11.0"
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
minversion = "7.4"
filterwarnings = [
    "ignore::DeprecationWarning:mysql.*:",
]
norecursedirs = [
    ".git",
    "venv",
    "dist",
    ".eggs",
    "wwdtm.egg-info",
]
