[project]
name = "wwdtm"
dynamic = ["version"]
authors = [
    {name = "Linh Pham", email = "dev@wwdt.me"}
]
description = "Library used to query data from copy of Wait Wait Stats Database."
readme = {file = "README.rst", content-type = "text/x-rst"}
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mysql-connector-python==8.2.0",
    "numpy==1.26.3",
    "python-slugify==8.0.1",
    "pytz==2023.3.post1",
]

[project.urls]
Documentation = "https://docs.wwdt.me"
"Source Code" = "https://github.com/questionlp/wwdtm"
Changes = "https://docs.wwdt.me/latest/changes/"
"Stats Page" = "https://stats.wwdt.me"
Mastodon = "https://linh.social/@qlp"

[tool.setuptools.dynamic]
version = {attr = "wwdtm.VERSION"}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
required-version = "23.12.0"
target-version = ["py310", "py311", "py312"]
line-length = 88

[tool.pytest.ini_options]
minversion = "7.4"
filterwarnings = [
    "ignore::DeprecationWarning:mysql.*:",
]
norecursedirs = [
    ".git",
    "venv",
    "dist",
    ".eggs",
    "wwdtm.egg-info",
]

[tool.ruff]
target-version = "py310"
select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "D",   # pydocstyle
    "E",   # Error
    "F",   # pyflakes
    "I",   # isort
    "ISC", # flake8-implicit-str-concat
    "N",   # pep8-naming
    "PGH", # pygrep-hooks
    "PTH", # flake8-use-pathlib
    "Q",   # flake8-quotes
    "S",   # bandit
    "SIM", # flake8-simplify
    "TRY", # tryceratops
    "UP",  # pyupgrade
    "W",   # Warning
    "YTT", # flake8-2020
]

exclude = [
    "migrations",
    "__pycache__",
    "manage.py",
    "settings.py",
    "env",
    ".env",
    "venv",
    ".venv",
]

ignore = [
    "B905",   # zip strict=True; remove once python <3.10 support is dropped.
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D401",
    "E402",
    "E501",
    "F401",
    "TRY003", # Avoid specifying messages outside exception class; overly strict, especially for ValueError
    "S608",
]
line-length = 88 # Must agree with Black

[tool.ruff.flake8-bugbear]
extend-immutable-calls = ["chr", "typer.Argument", "typer.Option"]

[tool.ruff.pydocstyle]
convention = "pep257"

[tool.ruff.per-file-ignores]
"tests/*.py" = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "S101",   # use of "assert"
    "S102",   # use of "exec"
    "S106",   # possible hardcoded password.
    "PGH001", # use of "eval"
]

[tool.ruff.pep8-naming]
staticmethod-decorators = ["pydantic.validator", "pydantic.root_validator"]
