[metadata]
name = wwdtm
version = attr: wwdtm.VERSION
url = https://github.com/questionlp/wwdtm
project_urls =
    Source Code = https://github.com/questionlp/wwdtm
license = Apache-2.0
author = Linh Pham
author_email = dev@wwdt.me
description = Library used to query data from copy of Wait Wait Stats Database
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License 2.0
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries

[options]
package_dir =
    =.
packages=find:
include_package_data = true
python_requires = >= 3.8
install_requires =
    mysql-connector-python==8.0.26
    numpy==1.21.2
    python-dateutil==2.8.2
    python-slugify==5.0.1
    pytz==2021.1
setup_requires =
    mysql-connector-python==8.0.26
    numpy==1.21.2
    python-dateutil==2.8.2
    python-slugify==5.0.1
    pytz==2021.1

[options.packages.find]
where=.

[tools:pytest]
testpaths = tests
filterwarnings =
    error
