[metadata]
name = wwdtm
version = attr: wwdtm.VERSION
url = https://github.com/questionlp/wwdtm
project_urls =
    Source Code = https://github.com/questionlp/wwdtm
    Issue Tracker = https://github.com/questionlp/wwdtm/issues
    Twitter = https://twitter.com/questionlp
license = Apache-2.0
author = Linh Pham
author_email = dev@wwdt.me
description = Library used to query data from copy of Wait Wait Stats Database.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries

[options]
package_dir =
    =.
packages=find:
include_package_data = true
python_requires = >= 3.8
install_requires =
    mysql-connector-python==8.0.27
    numpy==1.21.5
    python-dateutil==2.8.2
    python-slugify==5.0.2
    pytz==2021.3

[options.packages.find]
where=.

[tool:pytest]
testpaths = tests
filterwarnings =
    error
