[metadata]
name = wwdtm
version = attr: wwdtm.VERSION
url = https://github.com/questionlp/wwdtm
project_urls =
    Source Code = https://github.com/questionlp/wwdtm
    Issue Tracker = https://github.com/questionlp/wwdtm/issues
    Twitter = https://twitter.com/questionlp
license = Apache-2.0
author = Linh Pham
author_email = dev@wwdt.me
description = Library used to query data from copy of Wait Wait Stats Database.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries

[options]
package_dir =
    =.
packages=find:
include_package_data = true
python_requires = >= 3.8
install_requires =
    mysql-connector-python==8.0.31
    numpy==1.23.5
    python-dateutil==2.8.2
    python-slugify==6.1.2
    pytz==2022.6

[options.packages.find]
where=.

[tool:pytest]
testpaths = tests
filterwarnings =
    error
